Add license in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"publisher": "Itsakaseru",
 	"repository": "https://github.com/Itsakaseru/Suteppu",
 	"version": "0.0.2",
+	"license": "MIT",
 	"engines": {
 		"vscode": "^1.59.0"
 	},
